# audio-splitter

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
app/: __main__.py  main.py
app/api/: router.py
app/api/routes/: cleanup.py  cuts.py  health.py  media.py  projects.py
app/core/: config.py  file_storage.py  waveform_service.py
app/models/: schemas.py
app/services/: cleanup.py
app/services/audio/: cutter.py  ffmpeg.py
app/storage/: paths.py
app/ui/: layout.py  markers_view.py  uploader.py
docker/: Dockerfile
tests/: test_health.py  test_smoke.py
web/: app.js  index.html  styles.css
