[project]
name = "streamlit-mp3cutter"
version = "0.1.0"
description = "pour découper un fichier audio en plusieurs MP3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.52.2",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
