[project]
name = "streamlit-mp3cutter"
version = "0.1.0"
description = "pour découper un fichier audio en plusieurs MP3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "streamlit>=1.52.2",
    "streamlit-plotly-events>=0.0.6",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
